# farmup

./: .gitignore  README.md  package-lock.json  package.json  turbo.json
api-java/: .gitignore  package.json  pom.xml
api-java/src/main/java/com/farmup/farmup_java_backend/: FarmupJavaBackendApplication.java
api-java/src/main/java/com/farmup/farmup_java_backend/config/: JwtAuthenticationFilter.java  JwtTokenProvider.java  MongoConfig.java  SecurityConfig.java
api-java/src/main/java/com/farmup/farmup_java_backend/controller/: AuthController.java
api-java/src/main/java/com/farmup/farmup_java_backend/model/: User.java
api-java/src/main/java/com/farmup/farmup_java_backend/repository/: UserRepository.java
api-java/src/main/resources/: application.properties
api-java/src/test/java/com/farmup/farmup_java_backend/: FarmupJavaBackendApplicationTests.java
api-python/: label_enc.pkl  main.py  package.json  pyproject.toml  scaler.pkl  season_enc.pkl
api-python/irrigation/: main.py
api-python/python-notebooks/: 1.ipynb  2.ipynb
api-python/scrapper/: main.py
api-python/utils/: apicalls.py  crop_model.h5
apps/web/: package.json
apps/web/app/: page.tsx
database/: package.json
database/prisma/: schema.prisma
database/prisma/migrations/20250918172957_init/: migration.sql
frontend-next/: package.json
frontend-next/src/app/add-farm/: page.tsx  signup.jsx
frontend-next/src/app/assistant/: page.tsx
frontend-next/src/app/community/: page.tsx
frontend-next/src/app/crop-recommendations/: page.tsx
frontend-next/styles/: global.css
(+2 files in other folders)
